tests/paczka1/fuzzy1/77248006.err
Error in line 12: 28feY3DmXK S425 45,3
Error in line 14: 28feY3DmXK S425 37,94
Error in line 13: 28feY3DmXK A605 60,8
Error in line 24: 28feY3DmXK A304 61,3
Error in line 26: mVi8Pc S361 9,2
Error in line 25: 28feY3DmXK S361 97,1
Error in line 32: H9V0fat A304 4,7
